--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <script src="hw-counter.js"></script>
     <script src="hw-for.js"></script>
-    <script src="homework_2_3.js"></script>
+    <script src="hw-for-x2"></script>
   </body>
 </html>
