--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <script src="hw-counter.js"></script>
     <script src="hw-for.js"></script>
     <script src="hw-for-x2"></script>
+    <script src="hw-task-8.js"></script>
+    <script src="hw-while.js"></script>
   </body>
 </html>
