--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   <body>
     <script src="hw-counter.js"></script>
     <script src="hw-for.js"></script>
-    <script src="hw-for-x2"></script>
+    <script src="hw-for-x2.js"></script>
     <script src="hw-task-8.js"></script>
     <script src="hw-while.js"></script>
+    <script src="hw-dowhile.js"></script>
+    <script src="hw-for-in.js"></script>
+    <script src="hw-task-6.js"></script>
+    <script src="hw-task-7.js"></script>
   </body>
 </html>
